[tool.poetry]
name = "elements-of-programming-interviews-in-python"
version = "0.1.0"
description = ""
authors = ["Aleksandr Gontcharov <alexgoncharov@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
jupyter = "^1.0.0"
lab = "^6.3"
jupyterlab = "^3.0.11"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
